--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Sanver api",
   "main": "index.js",
   "scripts": {
-    "build":"babel src --out-dir build",
-    "dev":"nodemon src/index.js --exec babel-node",
-    "start":"node build/index.js"
+    "build": "babel src --out-dir build",
+    "dev": "nodemon src/index.js --exec babel-node",
+    "start": "node build/index.js"
   },
   "keywords": [],
   "author": "DeadLink92",
@@ -16,9 +16,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.1.1",
+    "mongoose-paginate-v2": "^1.7.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22"
   },
